# geepers-skills

./: AGENTS.md  README.md  aliases.generated.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: mirror-readonly-guard.yml
skills/builder/: SKILL.md
skills/data-fetch/: SKILL.md
skills/dataset-publish/: SKILL.md
skills/datavis/: SKILL.md
skills/doublecheck/: SKILL.md
skills/dream/: SKILL.md
skills/dream-swarm/: SKILL.md
skills/engineering/: SKILL.md
skills/executive/: SKILL.md
skills/finance/: SKILL.md
skills/geepers-builder/: SKILL.md
skills/geepers-corpus/: SKILL.md
skills/geepers-data/: SKILL.md
skills/geepers-datavis/: SKILL.md
skills/geepers-deploy/: SKILL.md
skills/geepers-doublecheck/: SKILL.md
skills/geepers-dream-swarm/: SKILL.md
skills/geepers-engineering/: SKILL.md
skills/geepers-etymology/: SKILL.md
skills/geepers-executive/: SKILL.md
skills/geepers-fetch/: SKILL.md
skills/geepers-finance/: SKILL.md
skills/geepers-git/: SKILL.md
skills/geepers-llm/: SKILL.md
skills/geepers-mcp/: SKILL.md
skills/geepers-orchestrate/: SKILL.md
skills/geepers-planner/: SKILL.md
skills/geepers-poet/: SKILL.md
skills/geepers-product/: SKILL.md
skills/geepers-quality/: SKILL.md
skills/geepers-readme/: SKILL.md
skills/geepers-scout/: SKILL.md
skills/geepers-swarm/: SKILL.md
skills/geepers-team/: SKILL.md
skills/geepers-testing/: SKILL.md
skills/geepers-validate/: SKILL.md
skills/product/: README.md  SKILL.md  pyproject.toml  server.json
skills/product/src/: server.py
(+64 files in other folders)
