[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geepers-product"
version = "0.1.0"
description = "Product Manager MCP Server for PRD Generation and Engineering Handoff"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Antigravity", email = "antigravity@geepers.ai" },
]
dependencies = [
  "openai>=1.0.0",
  "mcp"
]

[project.scripts]
geepers-product = "geepers_product.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src"]
